# Plp-programs

./: .gitignore  Cargo.toml  PROTECTION_WORKFLOW.md  README.md  WORKFLOW_TEST.md  protection_final.txt  study_planner.db
data/: study_sessions.csv
src/: analyzer.rs  data_processing.rs  main.rs  ml_model.rs  models.rs  study_planner.rs
src/database/: mod.rs  models.rs  repository.rs  setup.rs
src/utils/: validation.rs
src/web/: handlers.rs  routes.rs
templates/: index.html
