[package]
name = "smart_study_planner"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-rt = "2.9"
actix-multipart = "0.6.2"
actix-session = { version = "0.8", features = ["cookie-session"] }
futures-util = "0.3"
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
regex = "1.10"  # NEW: For email validation and password strength
lazy_static = "1.4"  # NEW: For regex patterns
rand = "0.8"  # NEW: For password reset tokens